菜单表响应式改造