@@ -1,48 +1,53 @@
 package com.ruoyi.system.service.impl;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
 import com.ruoyi.common.constant.Constants;
 import com.ruoyi.common.constant.UserConstants;
 import com.ruoyi.common.core.domain.TreeSelect;
 import com.ruoyi.common.core.domain.entity.SysMenu;
 import com.ruoyi.common.core.domain.entity.SysRole;
 import com.ruoyi.common.core.domain.entity.SysUser;
+import com.ruoyi.common.exception.ServiceException;
 import com.ruoyi.common.utils.SecurityUtils;
 import com.ruoyi.common.utils.StringUtils;
+import com.ruoyi.framework.security.ReactiveSecurityUtils;
+import com.ruoyi.system.converter.SysMenuConverter;
 import com.ruoyi.system.domain.vo.MetaVo;
 import com.ruoyi.system.domain.vo.RouterVo;
+import com.ruoyi.system.dto.SysMenuDTO;
 import com.ruoyi.system.mapper.SysMenuMapper;
 import com.ruoyi.system.mapper.SysRoleMapper;
-import com.ruoyi.system.mapper.SysRoleMenuMapper;
-import com.ruoyi.system.service.ISysMenuService;
+import com.ruoyi.system.query.SysMenuQuery;
+import com.ruoyi.system.repository.SysMenuRepository;
+import com.ruoyi.system.service.SysMenuService;
+import com.ruoyi.system.vo.SysMenuVO;
+import jakarta.annotation.Resource;
+import org.apache.commons.lang3.ObjectUtils;
+import org.springframework.stereotype.Service;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
+
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
- * 菜单 业务层处理
+ * 菜单表 业务处理
  *
- * @author ruoyi
+ * @author bugout
+ * @version 2025-11-14
  */
 @Service
-public class SysMenuServiceImpl implements ISysMenuService {
-    public static final String PREMISSION_STRING = "perms[\"{0}\"]";
+public class SysMenuServiceImpl implements SysMenuService {
 
-    @Autowired
+    @Resource
+    private SysMenuConverter sysMenuConverter;
+    @Resource
+    private SysMenuRepository sysMenuRepository;
+
+    @Resource
     private SysMenuMapper menuMapper;
 
-    @Autowired
+    @Resource
     private SysRoleMapper roleMapper;
-
-    @Autowired
-    private SysRoleMenuMapper roleMenuMapper;
 
     /**
      * 根据用户查询系统菜单列表
@@ -63,7 +68,7 @@ public class SysMenuServiceImpl implements ISysMenuService {
      */
     @Override
     public List<SysMenu> selectMenuList(SysMenu menu, Long userId) {
-        List<SysMenu> menuList = null;
+        List<SysMenu> menuList;
         // 管理员显示所有菜单信息
         if (SysUser.isAdmin(userId)) {
             menuList = menuMapper.selectMenuList(menu);
@@ -118,7 +123,7 @@ public class SysMenuServiceImpl implements ISysMenuService {
      */
     @Override
     public List<SysMenu> selectMenuTreeByUserId(Long userId) {
-        List<SysMenu> menus = null;
+        List<SysMenu> menus;
         if (SecurityUtils.isAdmin(userId)) {
             menus = menuMapper.selectMenuTreeAll();
         } else {
@@ -147,7 +152,7 @@ public class SysMenuServiceImpl implements ISysMenuService {
      */
     @Override
     public List<RouterVo> buildMenus(List<SysMenu> menus) {
-        List<RouterVo> routers = new LinkedList<RouterVo>();
+        List<RouterVo> routers = new LinkedList<>();
         for (SysMenu menu : menus) {
             RouterVo router = new RouterVo();
             router.setHidden("1".equals(menu.getVisible()));
@@ -163,7 +168,7 @@ public class SysMenuServiceImpl implements ISysMenuService {
                 router.setChildren(buildMenus(cMenus));
             } else if (isMenuFrame(menu)) {
                 router.setMeta(null);
-                List<RouterVo> childrenList = new ArrayList<RouterVo>();
+                List<RouterVo> childrenList = new ArrayList<>();
                 RouterVo children = new RouterVo();
                 children.setPath(menu.getPath());
                 children.setComponent(menu.getComponent());
@@ -175,7 +180,7 @@ public class SysMenuServiceImpl implements ISysMenuService {
             } else if (menu.getParentId().intValue() == 0 && isInnerLink(menu)) {
                 router.setMeta(new MetaVo(menu.getMenuName(), menu.getIcon()));
                 router.setPath("/");
-                List<RouterVo> childrenList = new ArrayList<RouterVo>();
+                List<RouterVo> childrenList = new ArrayList<>();
                 RouterVo children = new RouterVo();
                 String routerPath = innerLinkReplaceEach(menu.getPath());
                 children.setPath(routerPath);
@@ -198,10 +203,9 @@ public class SysMenuServiceImpl implements ISysMenuService {
      */
     @Override
     public List<SysMenu> buildMenuTree(List<SysMenu> menus) {
-        List<SysMenu> returnList = new ArrayList<SysMenu>();
-        List<Long> tempList = menus.stream().map(SysMenu::getMenuId).collect(Collectors.toList());
-        for (Iterator<SysMenu> iterator = menus.iterator(); iterator.hasNext(); ) {
-            SysMenu menu = (SysMenu) iterator.next();
+        List<SysMenu> returnList = new ArrayList<>();
+        List<Long> tempList = menus.stream().map(SysMenu::getMenuId).toList();
+        for (SysMenu menu : menus) {
             // 如果是顶级节点, 遍历该父节点的所有子节点
             if (!tempList.contains(menu.getParentId())) {
                 recursionFn(menus, menu);
@@ -224,90 +228,6 @@ public class SysMenuServiceImpl implements ISysMenuService {
     public List<TreeSelect> buildMenuTreeSelect(List<SysMenu> menus) {
         List<SysMenu> menuTrees = buildMenuTree(menus);
         return menuTrees.stream().map(TreeSelect::new).collect(Collectors.toList());
-    }
-
-    /**
-     * 根据菜单ID查询信息
-     *
-     * @param menuId 菜单ID
-     * @return 菜单信息
-     */
-    @Override
-    public SysMenu selectMenuById(Long menuId) {
-        return menuMapper.selectMenuById(menuId);
-    }
-
-    /**
-     * 是否存在菜单子节点
-     *
-     * @param menuId 菜单ID
-     * @return 结果
-     */
-    @Override
-    public boolean hasChildByMenuId(Long menuId) {
-        int result = menuMapper.hasChildByMenuId(menuId);
-        return result > 0;
-    }
-
-    /**
-     * 查询菜单使用数量
-     *
-     * @param menuId 菜单ID
-     * @return 结果
-     */
-    @Override
-    public boolean checkMenuExistRole(Long menuId) {
-        int result = roleMenuMapper.checkMenuExistRole(menuId);
-        return result > 0;
-    }
-
-    /**
-     * 新增保存菜单信息
-     *
-     * @param menu 菜单信息
-     * @return 结果
-     */
-    @Override
-    public int insertMenu(SysMenu menu) {
-        return menuMapper.insertMenu(menu);
-    }
-
-    /**
-     * 修改保存菜单信息
-     *
-     * @param menu 菜单信息
-     * @return 结果
-     */
-    @Override
-    public int updateMenu(SysMenu menu) {
-        return menuMapper.updateMenu(menu);
-    }
-
-    /**
-     * 删除菜单管理信息
-     *
-     * @param menuId 菜单ID
-     * @return 结果
-     */
-    @Override
-    public int deleteMenuById(Long menuId) {
-        return menuMapper.deleteMenuById(menuId);
-    }
-
-    /**
-     * 校验菜单名称是否唯一
-     *
-     * @param menu 菜单信息
-     * @return 结果
-     */
-    @Override
-    public boolean checkMenuNameUnique(SysMenu menu) {
-        Long menuId = StringUtils.isNull(menu.getMenuId()) ? -1L : menu.getMenuId();
-        SysMenu info = menuMapper.checkMenuNameUnique(menu.getMenuName(), menu.getParentId());
-        if (StringUtils.isNotNull(info) && info.getMenuId().longValue() != menuId.longValue()) {
-            return UserConstants.NOT_UNIQUE;
-        }
-        return UserConstants.UNIQUE;
     }
 
     /**
@@ -417,9 +337,8 @@ public class SysMenuServiceImpl implements ISysMenuService {
      * @return String
      */
     public List<SysMenu> getChildPerms(List<SysMenu> list, int parentId) {
-        List<SysMenu> returnList = new ArrayList<SysMenu>();
-        for (Iterator<SysMenu> iterator = list.iterator(); iterator.hasNext(); ) {
-            SysMenu t = (SysMenu) iterator.next();
+        List<SysMenu> returnList = new ArrayList<>();
+        for (SysMenu t : list) {
             // 一、根据传入的某个父节点ID,遍历该父节点的所有子节点
             if (t.getParentId() == parentId) {
                 recursionFn(list, t);
@@ -450,10 +369,8 @@ public class SysMenuServiceImpl implements ISysMenuService {
      * 得到子节点列表
      */
     private List<SysMenu> getChildList(List<SysMenu> list, SysMenu t) {
-        List<SysMenu> tlist = new ArrayList<SysMenu>();
-        Iterator<SysMenu> it = list.iterator();
-        while (it.hasNext()) {
-            SysMenu n = (SysMenu) it.next();
+        List<SysMenu> tlist = new ArrayList<>();
+        for (SysMenu n : list) {
             if (n.getParentId().longValue() == t.getMenuId().longValue()) {
                 tlist.add(n);
             }
@@ -465,7 +382,7 @@ public class SysMenuServiceImpl implements ISysMenuService {
      * 判断是否有子节点
      */
     private boolean hasChild(List<SysMenu> list, SysMenu t) {
-        return getChildList(list, t).size() > 0;
+        return !getChildList(list, t).isEmpty();
     }
 
     /**
@@ -477,4 +394,110 @@ public class SysMenuServiceImpl implements ISysMenuService {
         return StringUtils.replaceEach(path, new String[]{Constants.HTTP, Constants.HTTPS, Constants.WWW, ".", ":"},
                 new String[]{"", "", "", "/", "/"});
     }
+
+    /**
+     * 查询菜单列表
+     */
+    @Override
+    public Flux<SysMenuVO> selectMenuList(SysMenuQuery query) {
+        return ReactiveSecurityUtils.getUserId()
+                .flatMapMany(userId -> {
+                    // 管理员显示所有菜单信息
+                    if (SysUser.isAdmin(userId)) {
+                        return sysMenuRepository.selectMenuList(query);
+                    } else {
+                        return sysMenuRepository.selectMenuListByUserId(userId, query);
+                    }
+                })
+                .map(sysMenuConverter::toSysMenuVO);
+    }
+
+    /**
+     * 根据菜单ID查询信息
+     */
+    @Override
+    public Mono<SysMenuVO> selectMenuById(Long menuId) {
+        return sysMenuRepository.findById(menuId)
+                .switchIfEmpty(Mono.error(new ServiceException("菜单不存在")))
+                .map(sysMenuConverter::toSysMenuVO);
+    }
+
+    /**
+     * 新增菜单
+     */
+    @Override
+    public Mono<Void> insertMenu(SysMenuDTO dto) {
+        return this.checkMenuNameUnique(dto)
+                .then(Mono.defer(() -> {
+                    if (Objects.equals(dto.getIsFrame(), UserConstants.YES_FRAME) && !StringUtils.ishttp(dto.getPath())) {
+                        return Mono.error(new ServiceException("地址必须以http(s)://开头"));
+                    }
+                    return Mono.empty();
+                }))
+                .then(Mono.defer(() -> {
+                    com.ruoyi.system.entity.SysMenu menu = sysMenuConverter.toSysMenu(dto);
+                    return sysMenuRepository.save(menu);
+                }))
+                .then();
+    }
+
+    /**
+     * 校验菜单名称是否唯一
+     */
+    private Mono<Void> checkMenuNameUnique(SysMenuDTO dto) {
+        return sysMenuRepository.selectMenuNameUnique(dto.getMenuName(), dto.getParentId())
+                .flatMap(menu -> {
+                    if (ObjectUtils.notEqual(menu.getMenuId(), dto.getMenuId())) {
+                        return Mono.error(new ServiceException(String.format("菜单名称【%1$s】已存在 ", dto.getMenuName())));
+                    }
+                    return Mono.empty();
+                });
+    }
+
+    /**
+     * 修改菜单
+     */
+    @Override
+    public Mono<Void> updateMenu(SysMenuDTO dto) {
+        return this.checkMenuNameUnique(dto)
+                .then(Mono.defer(() -> {
+                    if (Objects.equals(dto.getMenuId(), dto.getParentId())) {
+                        return Mono.error(new ServiceException("上级菜单不能是自己"));
+                    }
+                    if (Objects.equals(dto.getIsFrame(), UserConstants.YES_FRAME) && !StringUtils.ishttp(dto.getPath())) {
+                        return Mono.error(new ServiceException("地址必须以http(s)://开头"));
+                    }
+                    return Mono.empty();
+                }))
+                .then(sysMenuRepository.findById(dto.getMenuId()))
+                .switchIfEmpty(Mono.error(new ServiceException("菜单不存在")))
+                .flatMap(menu -> {
+                    sysMenuConverter.copyProperties(dto, menu);
+                    return sysMenuRepository.save(menu);
+                })
+                .then();
+    }
+
+    /**
+     * 删除菜单
+     */
+    @Override
+    public Mono<Void> deleteMenuById(Long menuId) {
+        return sysMenuRepository.countChildByMenuId(menuId)
+                .flatMap(countChild -> {
+                    if (countChild > 0) {
+                        return Mono.error(new ServiceException("存在下级菜单，不允许删除"));
+                    }
+                    return Mono.empty();
+                })
+                .then(sysMenuRepository.countRoleByMenuId(menuId))
+                .flatMap(countRole -> {
+                    if (countRole > 0) {
+                        return Mono.error(new ServiceException("菜单已分配，不允许删除"));
+                    }
+                    return Mono.empty();
+                })
+                .then(sysMenuRepository.deleteById(menuId));
+    }
+
 }
